Fix tooltips in no-wrap areas

--- a/client/src/styles/_tooltip.scss
+++ b/client/src/styles/_tooltip.scss
@@ -13,6 +13,7 @@
   padding: 0.5em;
   position: absolute;
   transform: translateX(-50%);
+  white-space: initial;
   width: max-content;
   z-index: 2;
 
